force-app/main/default/objects/OrderItem/fields/Actual_Pickup_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Pickup_Date_Time__c</fullName>
    <formula>Order.Actual_Pickup_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Pickup Date/Time</label>
    <type>DateTime</type>
</CustomField>