force-app/main/default/objects/OrderItem/fields/Amount_Owed_as_of_Today__c.field-meta.xml
<CustomField>
    <fullName>Amount_Owed_as_of_Today__c</fullName>
    <formula>Total_Fees__c +  Late_Fee_as_of_Today__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Owed as of Today</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>