force-app/main/default/objects/OrderItem/fields/Borrowing_Duration_Integer_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Borrowing_Duration_Integer_Legacy__c</fullName>
    <label>Borrowing Duration Integer Legacy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>