force-app/main/default/objects/OrderItem/fields/Check_In_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Check In Quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>