force-app/main/default/objects/OrderItem/fields/Check_Out_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Quantity__c</fullName>
    <label>Check Out Quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>