force-app/main/default/objects/OrderItem/fields/Create_Date_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Create_Date_Order_Item__c</fullName>
    <label>Create Date - Order Item</label>
    <type>Date</type>
</CustomField>