force-app/main/default/objects/OrderItem/fields/Damaged__c.field-meta.xml
<CustomField>
    <fullName>Damaged__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Damaged</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>