force-app/main/default/objects/OrderItem/fields/Inventory_Tool__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Tool__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Order Tool</relationshipLabel>
    <relationshipName>Order_Tools</relationshipName>
    <type>Lookup</type>
</CustomField>