force-app/main/default/objects/OrderItem/fields/Late_Fee__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee__c</fullName>
    <formula>2*Late_Weeks__c * UnitPrice * Quantity * Affiliate_Handling_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Late Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>