force-app/main/default/objects/OrderItem/fields/Late_Fee_as_of_Today__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee_as_of_Today__c</fullName>
    <formula>2* Late_weeks_as_of_today__c * UnitPrice *  Reserved_Quantity__c * Affiliate_Handling_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Late Fee as of Today</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>