force-app/main/default/objects/OrderItem/fields/Late_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Late_Weeks__c</fullName>
    <formula>if(
        CEILING((Actual_Return_Date__c - Schedule_Return_Date__c)/7) &lt;0,
         0, 
          CEILING((Actual_Return_Date__c - Schedule_Return_Date__c)/7)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Late Weeks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>