force-app/main/default/objects/OrderItem/fields/Late_weeks_as_of_today__c.field-meta.xml
<CustomField>
    <fullName>Late_weeks_as_of_today__c</fullName>
    <formula>if(
        CEILING((  TODAY()   - Schedule_Return_Date__c)/7) &lt;0 &amp;&amp;  ISNULL(Actual_Return_Date__c  ) ,
         0, 
          CEILING((  TODAY() - Schedule_Return_Date__c)/7)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Late weeks as of today</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>