force-app/main/default/objects/OrderItem/fields/Lost__c.field-meta.xml
<CustomField>
    <fullName>Lost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lost</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>