force-app/main/default/objects/OrderItem/fields/Lost_Fee__c.field-meta.xml
<CustomField>
    <fullName>Lost_Fee__c</fullName>
    <formula>UnitPrice * Lost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lost Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>