force-app/main/default/objects/OrderItem/fields/Lowest_Available_Quantity_For_this_Item__c.field-meta.xml
<CustomField>
    <fullName>Lowest_Available_Quantity_For_this_Item__c</fullName>
    <description>Test Field will be removed later if needed</description>
    <label>Lowest Available Quantity For this Item</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>