force-app/main/default/objects/OrderItem/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;OrderId,  Order.Name, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order</label>
    <type>Text</type>
</CustomField>