force-app/main/default/objects/OrderItem/fields/Order_Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Order_Affiliate__c</fullName>
    <formula>Order.Affiliate__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Affiliate</label>
    <type>Text</type>
</CustomField>