force-app/main/default/objects/OrderItem/fields/Order_Agency__c.field-meta.xml
<CustomField>
    <fullName>Order_Agency__c</fullName>
    <formula>Order.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Agency</label>
    <type>Text</type>
</CustomField>