force-app/main/default/objects/OrderItem/fields/Order_Tool_Retail_Price__c.field-meta.xml
<CustomField>
    <fullName>Order_Tool_Retail_Price__c</fullName>
    <formula>UnitPrice  *  Reserved_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Tool Retail Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>