force-app/main/default/objects/OrderItem/fields/Overdue_legacy__c.field-meta.xml
<CustomField>
    <fullName>Overdue_legacy__c</fullName>
    <label>Overdue_legacy</label>
    <length>10</length>
    <type>Text</type>
</CustomField>