force-app/main/default/objects/OrderItem/fields/Retail_Cost_Date_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Retail_Cost_Date_Order_Item__c</fullName>
    <label>Retail Cost Date - Order Item</label>
    <length>50</length>
    <type>Text</type>
</CustomField>