force-app/main/default/objects/OrderItem/fields/Schedule_Pick_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Pick_Date__c</fullName>
    <label>Schedule Pick Date</label>
    <type>Date</type>
</CustomField>