force-app/main/default/objects/OrderItem/fields/Schedule_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Return_Date__c</fullName>
    <label>Schedule Return Date</label>
    <type>Date</type>
</CustomField>