force-app/main/default/objects/OrderItem/fields/Single_Handling_Fee_legacy__c.field-meta.xml
<CustomField>
    <fullName>Single_Handling_Fee_legacy__c</fullName>
    <label>Single Handling Fee_legacy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>