force-app/main/default/objects/OrderItem/fields/Submitter_Order_Item_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Order_Item_Legacy__c</fullName>
    <label>Submitter - Order Item Legacy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>