force-app/main/default/objects/OrderItem/fields/Tool_Handling_Fee_Per_Item__c.field-meta.xml
<CustomField>
    <fullName>Tool_Handling_Fee_Per_Item__c</fullName>
    <formula>Affiliate_Handling_Fee__c * UnitPrice*1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tool Handling Fee Per Item</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>