force-app/main/default/objects/OrderItem/fields/Total_Check_In_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Check_In_Quantity__c</fullName>
    <formula>NULLVALUE(Check_In_Quantity__c, 0)  +  NULLVALUE(Damaged__c, 0) +  NULLVALUE(Lost__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Check In Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>