force-app/main/default/objects/OrderItem/fields/Total_Handling_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Handling_Fee__c</fullName>
    <formula>Affiliate_Handling_Fee__c * UnitPrice * Quantity *if(ISPICKVAL(Requested_Borrowing_Period__c , &quot;1 week&quot;),  VALUE( TRIM(SUBSTITUTE(TEXT(Requested_Borrowing_Period__c) , &quot;week&quot;, &quot;&quot;))), VALUE(TRIM(SUBSTITUTE(TEXT(Requested_Borrowing_Period__c) , &quot;weeks&quot;, &quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Handling Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>