force-app/main/default/objects/OrderItem/fields/Total_Quantity_Returned_Lost_Broken__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity_Returned_Lost_Broken__c</fullName>
    <label>Total Qty rtd Lost Broken Legacy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>