force-app/main/default/objects/OrderItem/fields/Total_Retail_Cost_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Total_Retail_Cost_Legacy__c</fullName>
    <label>Total Retail Cost - Legacy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>