force-app/main/default/objects/OrderItem/validationRules/Check_in_Cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_in_Cannot_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Check_In_Quantity__c &lt;0</errorConditionFormula>
    <errorDisplayField>Check_In_Quantity__c</errorDisplayField>
    <errorMessage>Check In Quantity cannot be negative.</errorMessage>
</ValidationRule>