force-app/main/default/objects/OrderItem/validationRules/Check_in_not_greater_than_check_out.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_in_not_greater_than_check_out</fullName>
    <active>false</active>
    <errorConditionFormula>NULLVALUE(Check_Out_Quantity__c, 0)  &lt;  NULLVALUE(Total_Check_In_Quantity__c, 0)</errorConditionFormula>
    <errorMessage>Total Checked In Quantity cannot be greater than Checked Out Quantity.</errorMessage>
</ValidationRule>