force-app/main/default/objects/OrderItem/validationRules/Damaged_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Damaged_cannot_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Damaged__c &lt;0</errorConditionFormula>
    <errorDisplayField>Damaged__c</errorDisplayField>
    <errorMessage>Damaged cannot have a negative value</errorMessage>
</ValidationRule>