force-app/main/default/objects/OrderItem/validationRules/Lost_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_cannot_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Lost__c &lt;0</errorConditionFormula>
    <errorDisplayField>Lost__c</errorDisplayField>
    <errorMessage>Lost cannot have a negative value.</errorMessage>
</ValidationRule>